// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLink renders correctly 1`] = `
<a
  className="fEPKen"
  href="/"
  rel="noopener"
  target="_blank"
/>
`;

exports[`Link renders correctly 1`] = `
<a
  className="tCIOJ"
  href="/"
  onClick={[Function]}
/>
`;

exports[`StyledLink renders correctly 1`] = `
<a
  className="tCIOJ"
  href="/"
/>
`;
